# portfolio

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
.cargo/: config.toml
.github/workflows/: deploy.yml
content/blog/: indonesian-environmental-ai-agent.md
public/: robots.txt  sitemap.xml
src/: app.rs  lib.rs  main.rs
src/components/: blog_index.rs  blog_post.rs  hero.rs  mod.rs  projects.rs  skills.rs  timeline.rs
src/models/: blog.rs
src/server/: blog_api.rs  mod.rs
style/: main.css
tests/: e2e.rs
